test/depIndexReplace4.slq

def main(){
	a:=(0,);
	a[0]:=H(a[0]); /// error
}
